iris/docs/v1.6/_sources/iris/iris/util.txt
.. _iris.util:

=========
iris.util
=========



.. currentmodule:: iris

.. automodule:: iris.util

In this module:

 * :py:obj:`timers`
 * :py:obj:`approx_equal`
 * :py:obj:`array_equal`
 * :py:obj:`as_compatible_shape`
 * :py:obj:`between`
 * :py:obj:`broadcast_to_shape`
 * :py:obj:`broadcast_weights`
 * :py:obj:`clip_string`
 * :py:obj:`column_slices_generator`
 * :py:obj:`create_temp_filename`
 * :py:obj:`delta`
 * :py:obj:`describe_diff`
 * :py:obj:`ensure_array`
 * :py:obj:`file_is_newer_than`
 * :py:obj:`format_array`
 * :py:obj:`guess_coord_axis`
 * :py:obj:`is_regular`
 * :py:obj:`monotonic`
 * :py:obj:`new_axis`
 * :py:obj:`regular_step`
 * :py:obj:`reverse`
 * :py:obj:`rolling_window`


----------


.. autodata:: iris.util.timers

----------

.. autofunction:: iris.util.approx_equal

----------

.. autofunction:: iris.util.array_equal

----------

.. autofunction:: iris.util.as_compatible_shape

----------

.. autofunction:: iris.util.between

----------

.. autofunction:: iris.util.broadcast_to_shape

----------

.. autofunction:: iris.util.broadcast_weights

----------

.. autofunction:: iris.util.clip_string

----------

.. autofunction:: iris.util.column_slices_generator

----------

.. autofunction:: iris.util.create_temp_filename

----------

.. autofunction:: iris.util.delta

----------

.. autofunction:: iris.util.describe_diff

----------

.. autofunction:: iris.util.ensure_array

----------

.. autofunction:: iris.util.file_is_newer_than

----------

.. autofunction:: iris.util.format_array

----------

.. autofunction:: iris.util.guess_coord_axis

----------

.. autofunction:: iris.util.is_regular

----------

.. autofunction:: iris.util.monotonic

----------

.. autofunction:: iris.util.new_axis

----------

.. autofunction:: iris.util.regular_step

----------

.. autofunction:: iris.util.reverse

----------

.. autofunction:: iris.util.rolling_window

